# adventofcode2022

./: Cargo.toml
src/: main.rs
src/day01/src/: lib.rs
src/day02/src/: lib.rs
src/day03/: Cargo.toml
src/day03/src/: lib.rs
src/day04/src/: lib.rs
src/day05/data/: input.txt
src/day05/src/: lib.rs
src/day06/src/: lib.rs
