[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day01 = {path = 'src/day01'}
day02 = {path = 'src/day02'}
day03 = {path = 'src/day03'}
itertools = "0.10.5"
lazy_static = "1.4.0"
